--- a/arch/arm/boot/dts/imx6qdl-wisehmi.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-wisehmi.dtsi
@@ -12,7 +12,7 @@
 
 / {
 	memory {
-		reg = <0x10000000 0x80000000>;
+		reg = <0x10000000 0x40000000>;
 	};
 };
 
@@ -20,6 +20,8 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_enet_4>;
 	phy-mode = "rmii";
+	phy-reset-gpios = <&gpio2 31 0>;
+	phy-reset-duration = 1;
 };
 
 &gpc {
