--- a/arch/arm/boot/dts/imx6qdl.dtsi
+++ b/arch/arm/boot/dts/imx6qdl.dtsi
@@ -1098,10 +1098,11 @@
 	ecspi2 {
 		pinctrl_ecspi2_1: ecspi2grp-1 {
 			fsl,pins = <
-				MX6QDL_PAD_CSI0_DAT11__ECSPI2_SS0  0x100b1
 				MX6QDL_PAD_CSI0_DAT10__ECSPI2_MISO 0x100b1
 				MX6QDL_PAD_CSI0_DAT9__ECSPI2_MOSI  0x100b1
 				MX6QDL_PAD_CSI0_DAT8__ECSPI2_SCLK  0x100b1
+				// CS
+				MX6QDL_PAD_CSI0_DAT11__GPIO5_IO29  0x80000000
 			>;
 		};
 	};
@@ -1182,16 +1183,22 @@
 
 		pinctrl_enet_4: enetgrp-4 {
 			fsl,pins = <
+				/* RMII */
 				MX6QDL_PAD_ENET_MDIO__ENET_MDIO       0x1b0b0
 				MX6QDL_PAD_ENET_MDC__ENET_MDC         0x1b0b0
 				MX6QDL_PAD_ENET_CRS_DV__ENET_RX_EN    0x1b0b0
-				MX6QDL_PAD_ENET_REF_CLK__ENET_TX_CLK  0x1b0b0
 				MX6QDL_PAD_ENET_RX_ER__ENET_RX_ER     0x1b0b0
 				MX6QDL_PAD_ENET_TX_EN__ENET_TX_EN     0x1b0b0
 				MX6QDL_PAD_ENET_RXD0__ENET_RX_DATA0   0x1b0b0
 				MX6QDL_PAD_ENET_RXD1__ENET_RX_DATA1   0x1b0b0
 				MX6QDL_PAD_ENET_TXD0__ENET_TX_DATA0   0x1b0b0
 				MX6QDL_PAD_ENET_TXD1__ENET_TX_DATA1   0x1b0b0
+				/* reset */
+				MX6QDL_PAD_EIM_EB3__GPIO2_IO31        0x80000000
+				/* interrupt */
+				MX6QDL_PAD_ENET_REF_CLK__GPIO1_IO23   0x80000000
+				/* reference clock */
+				MX6QDL_PAD_GPIO_16__ENET_REF_CLK      0x4001b0a8
 			>;
 		};
 	};
@@ -1261,6 +1268,30 @@
 				MX6QDL_PAD_NANDF_RB0__NAND_READY_B 0xb000
 				MX6QDL_PAD_NANDF_CS0__NAND_CE0_B   0xb0b1
 				MX6QDL_PAD_NANDF_CS1__NAND_CE1_B   0xb0b1
+				MX6QDL_PAD_SD4_CMD__NAND_RE_B      0xb0b1
+				MX6QDL_PAD_SD4_CLK__NAND_WE_B      0xb0b1
+				MX6QDL_PAD_NANDF_D0__NAND_DATA00   0xb0b1
+				MX6QDL_PAD_NANDF_D1__NAND_DATA01   0xb0b1
+				MX6QDL_PAD_NANDF_D2__NAND_DATA02   0xb0b1
+				MX6QDL_PAD_NANDF_D3__NAND_DATA03   0xb0b1
+				MX6QDL_PAD_NANDF_D4__NAND_DATA04   0xb0b1
+				MX6QDL_PAD_NANDF_D5__NAND_DATA05   0xb0b1
+				MX6QDL_PAD_NANDF_D6__NAND_DATA06   0xb0b1
+				MX6QDL_PAD_NANDF_D7__NAND_DATA07   0xb0b1
+				MX6QDL_PAD_SD4_DAT0__NAND_DQS      0x00b1
+			>;
+		};
+
+		pinctrl_gpmi_nand_2: gpmi-nand-2 {
+			fsl,pins = <
+				MX6QDL_PAD_NANDF_CLE__NAND_CLE     0xb0b1
+				MX6QDL_PAD_NANDF_ALE__NAND_ALE     0xb0b1
+				MX6QDL_PAD_NANDF_WP_B__NAND_WP_B   0xb0b1
+				MX6QDL_PAD_NANDF_RB0__NAND_READY_B 0xb000
+				MX6QDL_PAD_NANDF_CS0__NAND_CE0_B   0xb0b1
+				MX6QDL_PAD_NANDF_CS1__NAND_CE1_B   0xb0b1
+				MX6QDL_PAD_NANDF_CS2__NAND_CE2_B   0xb0b1
+				MX6QDL_PAD_NANDF_CS3__NAND_CE3_B   0xb0b1
 				MX6QDL_PAD_SD4_CMD__NAND_RE_B      0xb0b1
 				MX6QDL_PAD_SD4_CLK__NAND_WE_B      0xb0b1
 				MX6QDL_PAD_NANDF_D0__NAND_DATA00   0xb0b1
