--- a/arch/arm/boot/dts/imx6q-wisehmi-emmc.dts
+++ b/arch/arm/boot/dts/imx6q-wisehmi-emmc.dts
@@ -20,7 +20,7 @@
 	};
 
 	chosen {
-        bootargs = "ubi.mtd=5 root=ubi0:rootfs rootfstype=ubifs rootwait rw console=ttymxc3,115200n8 lpj=7905280";
+        bootargs = "root=/dev/mmcblk0p2 rootfstype=ext4 rootwait rw console=ttymxc3,115200n8 lpj=7905280";
     };
 
 	aliases {
@@ -47,12 +47,11 @@
 	status = "okay";
 };
 
-&gpmi {
-	status = "okay";
-};
-
 &uart4 {
 	status = "okay";
 };
 
+&usdhc3 {
+	status = "okay";
+};
 
