--- a/arch/arm/boot/dts/imx6q-wisehmi.dts
+++ b/arch/arm/boot/dts/imx6q-wisehmi.dts
@@ -8,19 +8,19 @@
 
 /dts-v1/;
 
-#include "imx6dl.dtsi"
+#include "imx6q.dtsi"
 #include "imx6qdl-wisehmi.dtsi"
 
 / {
-	model = "Freescale i.MX6 DualLite/Solo Wise HMI Board";
-	compatible = "autorock,imx6dl-wisehmi", "autorock,imx6qdl-wisehmi", "fsl,imx6dl";
+	model = "Freescale i.MX6 Quad/Dual Wise HMI Board";
+	compatible = "autorock,imx6q-wisehmi", "autorock,imx6qdl-wisehmi", "fsl,imx6q";
 
 	memory {
 		reg = <0x10000000 0x40000000>;
 	};
 
 	chosen {
-        bootargs = "ubi.mtd=5 root=ubi0:rootfs rootfstype=ubifs rootwait rw console=ttymxc3,115200n8 lpj=7905280";
+        bootargs = "root=/dev/mmcblk0p2 rootfstype=ext4 rootwait rw console=ttymxc3,115200n8 lpj=7905280";
     };
 
 	aliases {
@@ -46,12 +46,32 @@
 &ldb {
 	status = "okay";
 };
-
+/*
 &gpmi {
 	status = "okay";
 };
-
+*/
 &uart4 {
+	status = "okay";
+};
+
+&usdhc2 {
+	status = "okay";
+};
+
+&usdhc3 {
+	status = "okay";
+};
+
+&flexcan1 {
+	status = "okay";
+};
+
+&flexcan2 {
+	status = "okay";
+};
+
+&usbh1 {
 	status = "okay";
 };
 
