--- a/arch/arm/boot/dts/imx6qdl-wisehmi.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-wisehmi.dtsi
@@ -11,8 +11,14 @@
  */
 
 / {
-	memory {
-		reg = <0x10000000 0x40000000>;
+	lcd: lcd@0 {
+		  compatible = "fsl,lcd";
+		  ipu_id = <0>;
+		  disp_id = <0>;
+		  default_ifmt = "BGR24";
+		  pinctrl-names = "default";
+		  pinctrl-0 = <&pinctrl_ipu1_1>;
+		  status = "disabled";
 	};
 };
 
@@ -34,7 +40,7 @@
 	ipu_id = <0>;
 	disp_id = <0>;
 	ext_ref = <1>;
-	mode = "sin1";
+	mode = "sin0";
 	sec_ipu_id = <0>;
 	sec_disp_id = <1>;
 };
@@ -80,6 +86,12 @@
 	pinctrl-0 = <&pinctrl_usdhc2_2>;
 };
 
+&usdhc3 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_usdhc3_1_50mhz>;
+	bus-width = <8>;
+};
+
 &ecspi2 {
 	fsl,spi-num-chipselects = <1>;
 	cs-gpios = <&gpio5 29 0>;
@@ -95,3 +107,19 @@
 	};
 };
 
+&flexcan1 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_flexcan1_3>;
+	trx-stby-gpio = <&gpio7 12 GPIO_ACTIVE_HIGH>;
+/*
+	trx-en-gpio = <&gpio4 13 GPIO_ACTIVE_LOW>;
+	trx-stby-gpio = <&gpio2 13 GPIO_ACTIVE_LOW>;
+	trx-nerr-gpio = <&gpio1 8 GPIO_ACTIVE_LOW>;
+*/
+};
+
+&flexcan2 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_flexcan2_2>;
+	trx-stby-gpio = <&gpio7 12 GPIO_ACTIVE_HIGH>;
+};
