--- a/arch/arm/boot/dts/imx6qdl.dtsi
+++ b/arch/arm/boot/dts/imx6qdl.dtsi
@@ -1248,6 +1248,16 @@
 				MX6QDL_PAD_KEY_ROW2__FLEXCAN1_RX 0x80000000
 			>;
 		};
+
+		pinctrl_flexcan1_3: flexcan1grp-3 {
+			fsl,pins = <
+				MX6QDL_PAD_KEY_ROW2__FLEXCAN1_RX 0x80000000
+				MX6QDL_PAD_KEY_COL2__FLEXCAN1_TX 0x80000000
+				MX6QDL_PAD_KEY_ROW3__GPIO4_IO13  0x80000000
+				MX6QDL_PAD_SD4_DAT5__GPIO2_IO13  0x80000000
+				MX6QDL_PAD_GPIO_8__GPIO1_IO08    0x80000000
+			>;
+		};
 	};
 
 	flexcan2 {
@@ -1255,6 +1265,14 @@
 			fsl,pins = <
 				MX6QDL_PAD_KEY_COL4__FLEXCAN2_TX 0x80000000
 				MX6QDL_PAD_KEY_ROW4__FLEXCAN2_RX 0x80000000
+			>;
+		};
+
+		pinctrl_flexcan2_2: flexcan2grp-2 {
+			fsl,pins = <
+				MX6QDL_PAD_KEY_COL4__FLEXCAN2_TX 0x80000000
+				MX6QDL_PAD_KEY_ROW4__FLEXCAN2_RX 0x80000000
+				MX6QDL_PAD_GPIO_17__GPIO7_IO12   0x80000000
 			>;
 		};
 	};
@@ -1684,6 +1702,21 @@
 				MX6QDL_PAD_SD3_DAT5__SD3_DATA5 0x17059
 				MX6QDL_PAD_SD3_DAT6__SD3_DATA6 0x17059
 				MX6QDL_PAD_SD3_DAT7__SD3_DATA7 0x17059
+			>;
+		};
+
+		pinctrl_usdhc3_1_50mhz: usdhc3grp-1-50mhz { /* 50Mhz */
+			fsl,pins = <
+				MX6QDL_PAD_SD3_CMD__SD3_CMD 0x17079
+				MX6QDL_PAD_SD3_CLK__SD3_CLK 0x10079
+				MX6QDL_PAD_SD3_DAT0__SD3_DATA0 0x17079
+				MX6QDL_PAD_SD3_DAT1__SD3_DATA1 0x17079
+				MX6QDL_PAD_SD3_DAT2__SD3_DATA2 0x17079
+				MX6QDL_PAD_SD3_DAT3__SD3_DATA3 0x17079
+				MX6QDL_PAD_SD3_DAT4__SD3_DATA4 0x17079
+				MX6QDL_PAD_SD3_DAT5__SD3_DATA5 0x17079
+				MX6QDL_PAD_SD3_DAT6__SD3_DATA6 0x17079
+				MX6QDL_PAD_SD3_DAT7__SD3_DATA7 0x17079
 			>;
 		};
 
