--- a/arch/arm/boot/dts/imx6qdl-wisehmi.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-wisehmi.dtsi
@@ -110,12 +110,9 @@
 &flexcan1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_flexcan1_3>;
-	trx-stby-gpio = <&gpio7 12 GPIO_ACTIVE_HIGH>;
-/*
-	trx-en-gpio = <&gpio4 13 GPIO_ACTIVE_LOW>;
+	trx-en-gpio = <&gpio4 13 GPIO_ACTIVE_HIGH>;
 	trx-stby-gpio = <&gpio2 13 GPIO_ACTIVE_LOW>;
 	trx-nerr-gpio = <&gpio1 8 GPIO_ACTIVE_LOW>;
-*/
 };
 
 &flexcan2 {
