--- a/arch/arm/boot/dts/imx6qdl.dtsi
+++ b/arch/arm/boot/dts/imx6qdl.dtsi
@@ -1193,6 +1193,8 @@
 				MX6QDL_PAD_ENET_RXD1__ENET_RX_DATA1   0x1b0b0
 				MX6QDL_PAD_ENET_TXD0__ENET_TX_DATA0   0x1b0b0
 				MX6QDL_PAD_ENET_TXD1__ENET_TX_DATA1   0x1b0b0
+				/* reset */
+				MX6QDL_PAD_GPIO_4__GPIO1_IO04         0x80000000
 				/* interrupt */
 				MX6QDL_PAD_ENET_REF_CLK__GPIO1_IO23   0x80000000
 				/* reference clock */
