--- a/arch/arm/boot/dts/imx6qdl.dtsi
+++ b/arch/arm/boot/dts/imx6qdl.dtsi
@@ -1586,6 +1586,13 @@
 		pinctrl_uart2_3: uart2grp-3 { /* DTE mode */
 			fsl,pins = <
 				MX6QDL_PAD_SD4_DAT4__UART2_RX_DATA   0x1b0b1
+				MX6QDL_PAD_SD4_DAT7__UART2_TX_DATA   0x1b0b1
+			>;
+		};
+
+		pinctrl_uart2_3dte: uart2grp-4 { /* DTE mode */
+			fsl,pins = <
+				MX6QDL_PAD_SD4_DAT4__UART2_RX_DATA   0x1b0b1
 				MX6QDL_PAD_SD4_DAT5__UART2_RTS_B     0x1b0b1
 				MX6QDL_PAD_SD4_DAT6__UART2_CTS_B     0x1b0b1
 				MX6QDL_PAD_SD4_DAT7__UART2_TX_DATA   0x1b0b1
