--- a/arch/arm/boot/dts/imx6dl-rbctrl.dts
+++ b/arch/arm/boot/dts/imx6dl-rbctrl.dts
@@ -182,6 +182,51 @@
 			>;
 		};
 	};
+
+	weim {
+		pinctrl_weim_cs0_1: weim_cs0grp-1 {
+			fsl,pins = <
+				MX6QDL_PAD_EIM_CS0__EIM_CS0_B   0xb0b1
+			>;
+		};
+		pinctrl_weim_cs1_1: weim_cs1grp-1 {
+			fsl,pins = <
+				MX6QDL_PAD_EIM_CS1__EIM_CS1_B	0xb0b1
+			>;
+		};
+
+		pinctrl_weim_nor_1: weim_norgrp-1 {
+			fsl,pins = <
+				MX6QDL_PAD_EIM_OE__EIM_OE_B		0xb0b1
+				MX6QDL_PAD_EIM_RW__EIM_RW		0xb0b1
+				MX6QDL_PAD_EIM_WAIT__EIM_WAIT_B	0xb060
+				MX6QDL_PAD_EIM_EB0__EIM_EB0_B	0x80000000
+				MX6QDL_PAD_EIM_EB1__EIM_EB1_B	0x80000000
+				MX6QDL_PAD_EIM_LBA__EIM_LBA_B	0x80000000
+				MX6QDL_PAD_EIM_BCLK__EIM_BCLK	0x80000000
+				/* data */
+				MX6QDL_PAD_EIM_DA0__EIM_AD00	0xb0b0
+				MX6QDL_PAD_EIM_DA1__EIM_AD01	0xb0b0
+				MX6QDL_PAD_EIM_DA2__EIM_AD02	0xb0b0
+				MX6QDL_PAD_EIM_DA3__EIM_AD03	0xb0b0
+				MX6QDL_PAD_EIM_DA4__EIM_AD04	0xb0b0
+				MX6QDL_PAD_EIM_DA5__EIM_AD05	0xb0b0
+				MX6QDL_PAD_EIM_DA6__EIM_AD06	0xb0b0
+				MX6QDL_PAD_EIM_DA7__EIM_AD07	0xb0b0
+				MX6QDL_PAD_EIM_DA8__EIM_AD08	0xb0b0
+				MX6QDL_PAD_EIM_DA9__EIM_AD09	0xb0b0
+				MX6QDL_PAD_EIM_DA10__EIM_AD10	0xb0b0
+				MX6QDL_PAD_EIM_DA11__EIM_AD11	0xb0b0
+				MX6QDL_PAD_EIM_DA12__EIM_AD12	0xb0b0
+				MX6QDL_PAD_EIM_DA13__EIM_AD13	0xb0b0
+				MX6QDL_PAD_EIM_DA14__EIM_AD14	0xb0b0
+				MX6QDL_PAD_EIM_DA15__EIM_AD15	0xb0b0
+				/* address */
+				MX6QDL_PAD_EIM_A17__EIM_ADDR17	0xb0b1
+				MX6QDL_PAD_EIM_A16__EIM_ADDR16	0xb0b1
+			>;
+		};
+	};
 };
 
 &usbh1 {
@@ -193,6 +238,50 @@
 	vbus-supply = <&reg_usb_otg_vbus>;
 	dr_mode = "host";
 	status = "okay";
+};
+
+&weim {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_weim_nor_1 &pinctrl_weim_cs1_1 &pinctrl_weim_cs0_1>;
+	fsl,weim-cs-gpr = <&gpr>;
+	#address-cells = <2>;
+	#size-cells = <1>;
+	ranges = <0 0 0x08000000 0x02000000		//cs0, fpga
+			1 0 0x0A000000 0x02000000	//cs1, fram
+			2 0 0x0C000000 0x02000000	//cs2, unused
+			3 0 0x0E000000 0x02000000>;	//cs3, unused
+
+	/*<offset data offset data>...*/
+	fsl,weim-reg-set = <0x9c 0x0	//ACLK is disabled
+				0x90 ((1<<5)|(1<<3)|(3<<1)|(1<<0))	//BCLK always output divide 4
+				0x94 ((14<<16)|(1<<0))	//enable dcr
+				0x9c (1<<4)			//ACLK is enabled
+				/*reset dcr*/
+	/*			0x94 ((14<<16)|(1<<0)|(1<<1))
+				0x94 ((14<<16)|(1<<0)|(1<<0))
+				0x94 ((14<<16)|(1<<0)|(1<<1))*/
+			>;
+
+	status = "okay";
+
+	fpga@0,0 {
+		compatible = "mtd-ram";
+		reg = <0 0 0x4000>;
+		#address-cells = <1>;
+		#size-cells = <1>;
+		bank-width = <2>;
+		fsl,weim-cs-timing = <0x00610089 0x00000001 0x1c172000
+				0x00000000 0x1c3ca3ca 0x00000000>;
+	};
+	fram@1,0 {
+		compatible = "mtd-ram";
+		reg = <1 0 0x4000>;
+		#address-cells = <1>;
+		#size-cells = <1>;
+		bank-width = <2>;
+		fsl,weim-cs-timing = <0x00610089 0x00000001 0x1c172000
+				0x00000000 0x1c3ca3ca 0x00000000>;
+	};
 };
 
 &ldb {
