--- a/arch/arm/configs/rbctrl_dev_defconfig
+++ b/arch/arm/configs/rbctrl_dev_defconfig
@@ -442,8 +442,7 @@ CONFIG_ATAGS=y
 # CONFIG_DEPRECATED_PARAM_STRUCT is not set
 CONFIG_ZBOOT_ROM_TEXT=0
 CONFIG_ZBOOT_ROM_BSS=0
-CONFIG_ARM_APPENDED_DTB=y
-# CONFIG_ARM_ATAG_DTB_COMPAT is not set
+# CONFIG_ARM_APPENDED_DTB is not set
 CONFIG_CMDLINE="noinitrd console=ttymxc0,115200"
 CONFIG_CMDLINE_FROM_BOOTLOADER=y
 # CONFIG_CMDLINE_EXTEND is not set
@@ -1364,7 +1363,7 @@ CONFIG_REGULATOR_ANATOP=y
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
 CONFIG_VIDEOMODE_HELPERS=y
 CONFIG_FB=y
-# CONFIG_FB_CMD_SPLASH is not set
+CONFIG_FB_CMD_SPLASH=y
 # CONFIG_FIRMWARE_EDID is not set
 # CONFIG_FB_DDC is not set
 # CONFIG_FB_BOOT_VESA_SUPPORT is not set
@@ -2248,6 +2247,7 @@ CONFIG_LZO_COMPRESS=y
 CONFIG_LZO_DECOMPRESS=y
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
+CONFIG_DECOMPRESS_GZIP=y
 CONFIG_DECOMPRESS_LZO=y
 CONFIG_GENERIC_ALLOCATOR=y
 CONFIG_HAS_IOMEM=y
