--- a/arch/arm/boot/dts/imx6dl-rbctrl.dts
+++ b/arch/arm/boot/dts/imx6dl-rbctrl.dts
@@ -64,6 +64,28 @@
 			regulator-boot-on;
 		};
 	};
+
+	psspi0 {
+		compatible = "spi-gpio";
+		pinctrl-names = "default";
+		pinctrl-0 = <&psspi0_pins_cfg>;
+		status = "okay";
+		gpio-sck = <&gpio2 18 0>;
+		gpio-mosi = <&gpio5 4 0>;
+		num-chipselects = <1>;
+		#address-cells = <1>;
+		#size-cells = <0>;
+		/* clients */
+
+		psdev: psdev@0{
+			compatible = "altr,passive-serial";
+			reg = <0>;
+			spi-max-frequency = <100000>;
+			gpio-nstatus = <&gpio6 6 0>;
+			gpio-confdone = <&gpio2 17 0>;
+			gpio-nconfig = <&gpio2 16 0>;
+		};
+	};
 };
 
 &iomuxc {
@@ -85,6 +107,7 @@
 
 	imx6qdl-wisehmi {
 		pinctrl_enet: enetgrp {
+
 			fsl,pins = <
 			    /* RMII */
 				MX6QDL_PAD_ENET_MDIO__ENET_MDIO			0x1b0b0
@@ -291,6 +314,17 @@
 		};
 	};
 
+	psspi0_pins_cfg {
+		psspi0_pins_cfg: psspi0 {
+			fsl,pins = <
+				MX6QDL_PAD_EIM_A20__GPIO2_IO18	0x80000000	//gpio2.18 fpga ps dclk
+				MX6QDL_PAD_EIM_A24__GPIO5_IO04	0x80000000	//gpio5.4 fpga ps dat0
+				MX6QDL_PAD_EIM_A21__GPIO2_IO17	0x80000000	//gpio2.17 fpga ps config done
+				MX6QDL_PAD_EIM_A22__GPIO2_IO16	0x80000000	//gpio2.16 fpga ps nconfig
+				MX6QDL_PAD_EIM_A23__GPIO6_IO06	0x80000000	//gpio6.6 fpga ps nstatus
+			>;
+		};
+	};
 };
 
 &fec {
