add lcd DTS for wisehmi

--- a/arch/arm/boot/dts/imx6dl-wisehmi.dts
+++ b/arch/arm/boot/dts/imx6dl-wisehmi.dts
@@ -12,8 +12,27 @@
 	};
 
 	chosen {
-        bootargs = "root=/dev/mmcblk1p2 rootfstype=ext4 rootwait rw console=ttymxc3,115200n8 lpj=7905280 initroot=10:none,initramfs,/startup/run";
-    };
+		bootargs = "root=/dev/mmcblk1p2 rootfstype=ext4 rootwait rw console=ttymxc3,115200n8 lpj=7905280 initroot=10:none,initramfs,/startup/run quiet";
+	};
+
+	aliases {
+		mxcfb0 = &mxcfb1;
+	};
+
+	mxcfb1: fb@0 {
+		compatible = "fsl,mxc_sdc_fb";
+		disp_dev = "lcd";
+		interface_pix_fmt = "BGR24";
+		mode_str = "LQ101K5DZ01";
+		default_bpp = <32>;
+		int_clk = <0>;
+		late_init = <0>;
+		status = "okay";
+	};
+};
+
+&lcd {
+	 status = "okay";
 };
 
 &fec {
