--- a/arch/arm/boot/dts/imx6dl-wisehmi.dts
+++ b/arch/arm/boot/dts/imx6dl-wisehmi.dts
@@ -1,56 +1,9 @@
 /dts-v1/;
 
 #include "imx6dl.dtsi"
-#include "imx6qdl-wisehmi.dtsi"
+#include "imx6qdl-wisehmi-dev.dtsi"
 
 / {
 	model = "Freescale i.MX6 DualLite/Solo Wise HMI Board";
 	compatible = "autorock,imx6dl-wisehmi", "autorock,imx6qdl-wisehmi", "fsl,imx6dl";
-
-	memory {
-		reg = <0x10000000 0x40000000>;
-	};
-
-	chosen {
-		bootargs = "root=/dev/mmcblk1p2 rootfstype=ext4 rootwait rw console=ttymxc3,115200n8 lpj=7905280 initroot=10:none,initramfs,/startup/run quiet";
-	};
-
-	aliases {
-		mxcfb0 = &mxcfb1;
-	};
-
-	mxcfb1: fb@0 {
-		compatible = "fsl,mxc_sdc_fb";
-		disp_dev = "lcd";
-		interface_pix_fmt = "BGR24";
-		mode_str = "LQ101K5DZ01";
-		default_bpp = <32>;
-		int_clk = <0>;
-		late_init = <0>;
-		status = "okay";
-	};
-};
-
-&lcd {
-	 status = "okay";
-};
-
-&fec {
-	status = "okay";
-};
-
-&uart2 {
-	status = "okay";
-};
-
-&uart4 {
-	status = "okay";
-};
-
-&usdhc2 {
-	status = "okay";
-};
-
-&usdhc3 {
-	status = "okay";
 };
